--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "pretest": "npm run prepare && npm run compile"
   },
   "dependencies": {
+    "@google-cloud/promisify": "^0.3.1",
     "protobufjs": "^6.8.0",
     "walkdir": "0.0.12"
   },
