--- a/.kokoro/release/docs.cfg
+++ b/.kokoro/release/docs.cfg
@@ -22,5 +22,5 @@ build_file: "nodejs-proto-files/.kokoro/trampoline.sh"
 
 env_vars: {
     key: "TRAMPOLINE_BUILD_FILE"
-    value: "nodejs-proto-files/.kokoro/release/docs.sh"
+    value: "github/nodejs-proto-files/.kokoro/release/docs.sh"
 }
