--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "pretest": "npm run prepare && npm run compile",
     "docs-test": "linkinator docs",
     "predocs-test": "npm run docs",
-    "prelint": "cd samples; npm link ../"
+    "prelint": "cd samples; npm link ../; npm i"
   },
   "dependencies": {
     "protobufjs": "^6.8.0",
