--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "docs-test": "linkinator docs",
     "predocs-test": "npm run docs",
     "prelint": "cd samples; npm link ../; npm install",
-    "precompile": "gts clean"
+    "precompile": "gts clean",
+    "api-extractor": "api-extractor run --local",
+    "api-documenter": "api-documenter yaml --input-folder=temp"
   },
   "dependencies": {
     "protobufjs": "^6.8.0",
@@ -56,6 +58,8 @@
     "mocha": "^8.0.0",
     "proxyquire": "^2.0.0",
     "sinon": "^9.0.0",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "@microsoft/api-documenter": "^7.8.10",
+    "@microsoft/api-extractor": "^7.8.10"
   }
 }
