--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "codecov": "^3.0.0",
     "decompress-zip": "^0.3.2",
     "got": "^11.0.0",
-    "gts": "^2.0.0",
+    "gts": "^3.0.0-alpha.1",
     "linkinator": "^2.0.0",
     "mocha": "^8.0.0",
     "proxyquire": "^2.0.0",
