--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "main": "./build/src/index.js",
   "types": "./build/src/index.d.ts",
   "files": [
+    "gapic/",
     "google/",
+    "grafeas/",
     "build/src"
   ],
   "keywords": [
