--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "walkdir": "^0.4.0"
   },
   "devDependencies": {
-    "@compodoc/compodoc": "^1.1.9",
+    "@compodoc/compodoc": "1.1.19",
     "@types/mocha": "^9.0.0",
     "@types/node": "^20.4.9",
     "@types/proxyquire": "^1.3.28",
@@ -54,7 +54,7 @@
     "decompress-zip": "^0.3.2",
     "got": "^11.0.0",
     "gts": "^5.0.0",
-    "linkinator": "^4.0.0",
+    "linkinator": "^3.0.0",
     "mocha": "^9.2.2",
     "proxyquire": "^2.0.0",
     "sinon": "^17.0.0",
