--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "fix": "gts fix",
     "system-test": "echo no system tests 😱",
     "samples-test": "cd samples && npm link ../ && npm test && cd ../",
-    "docs": "compodoc src/",
+    "docs": "jsdoc -c .jsdoc.js",
     "clean": "gts clean",
     "compile": "tsc -p .",
     "pretest": "npm run prepare && npm run compile",
@@ -44,7 +44,6 @@
     "walkdir": "^0.4.0"
   },
   "devDependencies": {
-    "@compodoc/compodoc": "1.1.19",
     "@types/mocha": "^9.0.0",
     "@types/node": "^20.4.9",
     "@types/proxyquire": "^1.3.28",
@@ -52,6 +51,9 @@
     "c8": "^9.0.0",
     "codecov": "^3.0.0",
     "decompress-zip": "^0.3.2",
+    "jsdoc": "^4.0.0",
+    "jsdoc-fresh": "^3.0.0",
+    "jsdoc-region-tag": "^3.0.0",
     "got": "^11.0.0",
     "gts": "^5.0.0",
     "linkinator": "^3.0.0",
