add module resolution

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,9 @@
     "lib": ["es2018", "dom"],
     "rootDir": ".",
     "outDir": "build",
-    "noImplicitAny": false
+    "noImplicitAny": false,
+    "moduleResolution": "nodenext",
+    "module": "nodenext"
   },
   "include": [
     "src/*.ts",
