--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "precompile": "gts clean"
   },
   "dependencies": {
-    "protobufjs": "^7.5.0",
+    "protobufjs": "7.5.3",
     "walkdir": "^0.4.1"
   },
   "devDependencies": {
